<resources>
    <string name="app_name">U4T8DataBase</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="task_data_empty">Task name is empty</string>
    <string name="to_finish_when">To finish when?</string>
    <string name="describe_the_task">Describe the task</string>
    <string name="add_task_activity_name">New task</string>
    <string name="name_of_the_task_to_do">Name of the task to do</string>
    <string name="task_name_is_Empty">Task name is Empty</string>
    <string name="priority">Priority:</string>
    <string name="status">Status:</string>
    <string name="new_task">NEW TASK</string>
</resources>
